# bancolombia-rag

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.memory/: user_profile.json
data/: conversations.db  eval_results.json
notebooks/: rag_evaluation.ipynb
scripts/: compare_reranking.py  deploy.sh  run_pipeline.py  run_scraper.py  test_agent.py  test_tracing.py
src/: __init__.py
src/agent/: __init__.py  agent.py  conversation_logger.py  memory.py  prompts.py
src/embeddings/: __init__.py  embedder.py  reranker.py
src/evaluation/: eval_dataset.py  evaluator.py
src/frontend/: __init__.py  app.py
src/frontend/pages/: evaluation.py  monitoring.py
src/mcp_server/: __init__.py  server.py  tools.py
src/pipeline/: __init__.py  chunker.py  cleaner.py
src/scraper/: __init__.py  crawler.py  parser.py  storage.py
src/vector_store/: __init__.py  chroma_repository.py  repository.py
tests/: __init__.py  test_conversation_logger.py  test_embedder.py  test_evaluator.py  test_mcp_server.py  test_pipeline.py  test_rag_tracing.py  test_reranker.py  test_scraper.py  test_vector_store.py
